Add student solve quizzes support
